# pypipet

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
configuration_examples/home_and_garden/: setting.yaml
configuration_examples/home_and_garden/bundle/: db_setting.yaml  file_template.yaml  spf_field_mapping.yaml  wc_field_mapping.yaml
configuration_examples/pharmacy/: setting.yaml
configuration_examples/pharmacy/bundle/: db_setting.yaml  file_template.yaml  wc_field_mapping.yaml
pypipet/cli/: __init__.py  api.py  catalog.py  cli.py  fulfillment.py  init.py  order.py  product.py  static.py  template.py  utility.py
pypipet/cli/cli/: catalog.py  fulfillment.py  inventory.py  product.py  static.py
pypipet/core/: config.py  config_service.py  db.py  errors.py  project_context.py
pypipet/core/default_setting/: db_setting.yaml  file_template.yaml  setting.yml  spf_field_mapping.yaml  wc_field_mapping.yaml
pypipet/core/fileIO/: file_loader.py  file_saver.py
pypipet/core/logging/: __init__.py  utility.py
pypipet/core/model/: base_object.py  customer.py  order.py  product.py  user.py  utility.py
pypipet/core/operations/: frontshop.py  fulfillment.py  inventory.py  order.py  static.py  supplier_invoice.py  user.py  utility.py
pypipet/core/pipeline/: action.py  pipeline.py  (+2 more)
pypipet/pypipet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_pipet.py
tests/cli/: test_cli.py
tests/core/: test_project_init.py  test_query.py
tests/plugins/: test_plugin.py  test_shopify.py
(+28 files in other folders)
